--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ tomli==2.0.1
 torch==2.2.1
 torchaudio==2.2.1
 torchvision==0.17.1
+pytorch-ignite==0.5.0.post2
 tqdm==4.66.2
 typing_extensions==4.9.0
 torch-summary==1.4.5
