--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,16 @@ pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.2.0
 sympy==1.12
-tensorboard==2.16.2
 tomli==2.0.1
 torch==2.2.1
 torchaudio==2.2.1
 torchvision==0.17.1
-scipy==1.13.1
-pytorch-ignite==0.5.0.post2
 tqdm==4.66.2
 typing_extensions==4.9.0
+tensorboard==2.16.2
+scipy==1.13.1
+pytorch-ignite==0.5.0.post2
 torch-summary==1.4.5
 matplotlib==3.9.0
+torch-fidelity==0.3.0
+torchmetrics==1.4.0.post0
